attempt to update website

--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -4,14 +4,12 @@ name: deploy-book
 on:
   push:
     branches:
-    - main
-    # If your git repository has the Jupyter Book within some-subfolder next to
-    # unrelated files, you can make this run only if a file within that specific
-    # folder has been modified.
-    #
-    # paths:
-    # - some-subfolder/**
-
+      - main
+    schedule:
+      # Run monthly on the 1st at midnight UTC to catch breaking changes
+      # Format: minute hour day-of-month month day-of-week
+      - cron: '0 0 1 * *'
+  
 # This job installs dependencies, builds the book, and pushes it to `gh-pages`
 jobs:
   deploy-book:
@@ -20,38 +18,43 @@ jobs:
       pages: write
       id-token: write
     steps:
-    - uses: actions/checkout@v3
+      - uses: actions/checkout@v5
 
-    # Install dependencies
-    - name: Set up Python 3.11
-      uses: actions/setup-python@v4
-      with:
-        python-version: 3.11
+      # Install dependencies
+      - name: Set up Python
+        uses: actions/setup-python@v6
+        with:
+          python-version: "3.13"
+          cache: pip # Implicitly uses requirements.txt for cache key
 
-    - name: Install dependencies
-      run: pip install -r website/requirements_py.txt
+      - name: Install dependencies
+        run: pip install -r website/requirements_py.txt
 
-    ## (optional) Cache your executed notebooks between runs
-    ## if you have config:
-    ## execute:
-    ##   execute_notebooks: cache
-    #- name: cache executed notebooks
-    #  uses: actions/cache@v3
-    #  with:
-    #    path: _build/.jupyter_cache
-    #    key: jupyter-book-cache-${{ hashFiles('docs/requirements_py.txt') }}
+        # # (optional) Cache your executed notebooks between runs
+        # # if you have config:
+        # # execute:
+        # #   execute_notebooks: cache
+        # - name: cache executed notebooks
+        #   uses: actions/cache@v4
+        #   with:
+        #     path: _build/.jupyter_cache
+        #     key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
 
-    # Build the book
-    - name: Build the book
-      run: jupyter-book build website/
+      # Build the book
+      - name: Build the book
+        run: |
+          jupyter-book build --all website/
 
-    # Upload the book's HTML as an artifact
-    - name: Upload artifact
-      uses: actions/upload-pages-artifact@v2
-      with:
-        path: "website/_build/html"
+      # https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site#publishing-with-a-custom-github-actions-workflow
 
-    # Deploy the book's HTML to GitHub Pages
-    - name: Deploy to GitHub Pages
-      id: deployment
-      uses: actions/deploy-pages@v2
+      # Upload the book's HTML as an artifact
+      - name: Upload artifact
+        uses: actions/upload-pages-artifact@v4
+        with:
+          path: "website/_build/html"
+
+      # Deploy the book's HTML to GitHub Pages
+      - name: Deploy to GitHub Pages
+        if: success()
+        id: deployment
+        uses: actions/deploy-pages@v4
