troubleshooting GitHub Actions

--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -28,7 +28,7 @@ jobs:
           cache: pip # Implicitly uses requirements.txt for cache key
 
       - name: Install dependencies
-        run: pip install -r website/requirements_py.txt
+        run: pip install -r website/requirements.txt
 
         # # (optional) Cache your executed notebooks between runs
         # # if you have config:
