--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -43,7 +43,7 @@ jobs:
       # Build the book
       - name: Build the book
         run: |
-          jupyter-book build --all website/
+          jupyter-book build . 
 
       # https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site#publishing-with-a-custom-github-actions-workflow
 
