--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -30,19 +30,19 @@ jobs:
       - name: Install dependencies
         run: pip install -r website/requirements.txt
 
-        # # (optional) Cache your executed notebooks between runs
-        # # if you have config:
-        # # execute:
-        # #   execute_notebooks: cache
-        # - name: cache executed notebooks
-        #   uses: actions/cache@v4
-        #   with:
-        #     path: _build/.jupyter_cache
-        #     key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
+      # # (optional) Cache your executed notebooks between runs
+      # # if you have config:
+      # # execute:
+      # #   execute_notebooks: cache
+      # - name: cache executed notebooks
+      #   uses: actions/cache@v4
+      #   with:
+      #     path: _build/.jupyter_cache
+      #     key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
 
       # Build the book
       - name: Build the book
-        run: jupyter-book build website/ --verbose
+        run: jupyter-book build website/ 
 
       # https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site#publishing-with-a-custom-github-actions-workflow
 
@@ -50,7 +50,7 @@ jobs:
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v4
         with:
-          path: "website/_build/html"
+          path: website/_build/html
 
       # Deploy the book's HTML to GitHub Pages
       - name: Deploy to GitHub Pages
