--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -1,59 +1,47 @@
 name: deploy-book
 
-# Run this when the master or main branch changes
 on:
+  # Trigger the deploy on push to main branch
   push:
     branches:
-      - main
-    schedule:
-      # Run monthly on the 1st at midnight UTC to catch breaking changes
-      # Format: minute hour day-of-month month day-of-week
-      - cron: '0 0 1 * *'
-  
-# This job installs dependencies, builds the book, and pushes it to `gh-pages`
+    - main
+  schedule:
+    # Run monthly on the 1st at midnight UTC to catch breaking changes
+    # Format: minute hour day-of-month month day-of-week
+    - cron: '0 0 1 * *'
+
+permissions:
+  contents: write # needed for peaceiris GH pages deploy
+
 jobs:
   deploy-book:
     runs-on: ubuntu-latest
-    permissions:
-      pages: write
-      id-token: write
     steps:
-      - uses: actions/checkout@v5
-
-      # Install dependencies
-      - name: Set up Python
-        uses: actions/setup-python@v6
-        with:
-          python-version: "3.13"
-          cache: pip # Implicitly uses requirements.txt for cache key
-
-      - name: Install dependencies
-        run: pip install -r website/requirements.txt
-
-      # # (optional) Cache your executed notebooks between runs
-      # # if you have config:
-      # # execute:
-      # #   execute_notebooks: cache
-      # - name: cache executed notebooks
-      #   uses: actions/cache@v4
-      #   with:
-      #     path: _build/.jupyter_cache
-      #     key: jupyter-book-cache-${{ hashFiles('requirements.txt') }}
-
-      # Build the book
-      - name: Build the book
-        run: jupyter-book build website/ 
-
-      # https://docs.github.com/en/pages/getting-started-with-github-pages/configuring-a-publishing-source-for-your-github-pages-site#publishing-with-a-custom-github-actions-workflow
-
-      # Upload the book's HTML as an artifact
-      - name: Upload artifact
-        uses: actions/upload-pages-artifact@v4
-        with:
-          path: website/_build/html
-
-      # Deploy the book's HTML to GitHub Pages
-      - name: Deploy to GitHub Pages
-        if: success()
-        id: deployment
-        uses: actions/deploy-pages@v4
+    # Checkout the repo
+    - uses: actions/checkout@v5
+    
+    # Install python
+    - name: Set up Python
+      uses: actions/setup-python@v5
+      with:
+        python-version: 3.11
+    
+    # Install dependencies
+    - name: Install dependencies
+      run: |
+          python -m pip install --upgrade pip
+          pip install jupyter-book myst-parser pyyaml nbformat
+          pip install -r docs/requirements.txt
+    
+    # Build the book
+    - name: Build the book
+      run: jupyter-book build --all website/
+    
+    # Deploy to GH-pages only if the build succeeds
+    - name: Deploy to GitHub Pages
+      if: success()
+      uses: peaceiris/actions-gh-pages@v4
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        publish_dir: website/_build/html
+        publish_branch: gh-pages
