--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -31,7 +31,7 @@ jobs:
       run: |
           python -m pip install --upgrade pip
           pip install jupyter-book myst-parser pyyaml nbformat
-          pip install -r docs/requirements.txt
+          pip install -r website/requirements.txt
     
     # Build the book
     - name: Build the book
