--- a/website/_config.yml
+++ b/website/_config.yml
@@ -2,10 +2,10 @@
 # Book settings
 # Learn more at https://jupyterbook.org/customize/config.html
 
-title: Personal Page
+title: Table of Contents
 author: Alexander Thames
-copyright: 2026  # Copyright year to be placed in the footer
-logo: 
+copyright: "2026"  # Copyright year to be placed in the footer
+logo: "" 
 theme: jekyll-theme-minimal
 markdown: GFM
 
