trying to get the PDF to embed from a custom folder

--- a/.github/workflows/deploy-book.yml
+++ b/.github/workflows/deploy-book.yml
@@ -35,7 +35,9 @@ jobs:
     
     # Build the book
     - name: Build the book
-      run: jupyter-book build --all website/
+      run: |
+        jupyter-book clean website/
+        jupyter-book build --all website/
     
     # Deploy to GH-pages only if the build succeeds
     - name: Deploy to GitHub Pages
