trying again to get the /pdfs directory to work

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -56,4 +56,4 @@ html:
 # include the /pdfs folder in the webpage
 sphinx:
   config:
-    html_extra_path: ['./pdfs']
+    html_extra_path: ["pdfs"]
