--- a/website/_config.yml
+++ b/website/_config.yml
@@ -6,7 +6,7 @@ title: Table of Contents
 author: Alexander Thames
 copyright: "2026"  # Copyright year to be placed in the footer
 logo: "" 
-theme: jekyll-theme-minimal
+theme: jekyll-theme-tactile
 markdown: GFM
 
 #######################################################################################
