trying to add author identifiers

--- a/website/_config.yml
+++ b/website/_config.yml
@@ -4,6 +4,7 @@
 
 title: Table of Contents
 author: Alexander Thames
+  pronouns: "he/him"
 copyright: "2026"  # Copyright year to be placed in the footer
 logo: "" 
 theme: jekyll-theme-tactile
