--- a/website/_config.yml
+++ b/website/_config.yml
@@ -3,7 +3,7 @@
 # Learn more at https://jupyterbook.org/customize/config.html
 
 title: Table of Contents
-author: Alexander Thames
+author: Alexander B. Thames
 copyright: "2026"  # Copyright year to be placed in the footer
 logo: "" 
 theme: jekyll-theme-tactile
